testing just testing

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -82,7 +82,7 @@
       padding: 10px 0;
       font-size: 22px;
       &:hover {
-        color: grey;
+        color: rgb(116, 115, 115);
       }
       &:focus {
         color: grey;
