--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -85,7 +85,7 @@
         color: rgb(110, 110, 110);
       }
       &:focus {
-        color: grey;
+        color: rgb(150, 150, 150);
       }
       h3 {
         margin-bottom: 0;
