--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .navContainer {
   width: 100%;
   display: block;
-  position: relative;
+  position: fixed;
   top: 20px;
   left: 20px;
   z-index: 1;
