--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -1,5 +1,13 @@
 .gridFotos{
     width: 90%;
     margin: 0 auto;
-    border-radius: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    img{
+        width: 60%;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
 }
