--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -9,22 +9,30 @@
 
   input {
     display: block;
-    width: 40px;
+    width: 100%;
     height: 32px;
+    background-color: rgba($color: #000000, $alpha: 0.3);
     position: absolute;
     top: -7px;
     left: -5px;
     cursor: pointer;
     opacity: 0;
     z-index: 2;
-    &:checked ~ ul {
+
+    &:checked~ul {
       transform: none;
       transition: 1s ease-out;
     }
+    &:checked~section {
+      transform: none;
+      transition: 1s ease-out;
+    }
+
     @media (min-width: 768px) {
       display: none;
     }
   }
+
   span {
     display: block;
     width: 33px;
@@ -38,24 +46,27 @@
     z-index: 1;
 
     transform-origin: 4px 0px;
+
     &:first-child {
       transform-origin: 0% 100%;
     }
+
     &:nth-last-child(2) {
       transform-origin: 0% 100%;
     }
+
     @media (min-width: 768px) {
       display: none;
     }
   }
+
   .menu {
+    width: 50%;
     position: absolute;
-    margin: -100px 0 0 -60px;
-    padding: 20px;
-    top: 70px;
-    background: #ededed;
+    height: 600px;
+    background: #ffffff;
     list-style-type: none;
-    transform: translate(-100%, 0);
+    // transform: translate(-100%, 0);
     display: flex;
     flex-direction: column;
     text-decoration: none;
@@ -63,13 +74,18 @@
     transition: color 0.3s ease;
 
     li {
-      margin: 15px 40px;
+      margin-top: 15px;
+      margin-right: 5px;
+      margin-left: 30px;
+      width: 100%;
       &:hover {
         color: black;
       }
+
       &:first-child {
         margin-top: 30px;
       }
+
       @media (min-width: 768px) {
         padding: 0;
         margin: 15px 12px;
@@ -80,38 +96,75 @@
       color: black;
       text-decoration: none;
       padding: 10px 0;
-      font-size: 22px;
+      font-size: 18px;
+      width: 100%;
+
       &:hover {
         color: rgb(116, 115, 115);
       }
+
       &:focus {
         color: grey;
         color: rgb(110, 110, 110);
       }
+
       &:focus {
         color: rgb(150, 150, 150);
       }
+
       h3 {
         margin-bottom: 0;
       }
+
       p {
         font-size: 15px;
         margin-top: 0;
       }
     }
+
     @media (min-width: 768px) {
+      margin: 0;
+      top: 0;
       flex-direction: row;
       width: 100vw;
       transform: none;
       justify-content: end;
-      height: 10vh;
+      height: 14vh;
+      position: fixed;
+      left: 0;
+
       .first {
         position: absolute;
         bottom: 0;
         left: 0;
         margin-left: 100px;
         margin-bottom: 30px;
+        align-self: center;
       }
     }
+  }
+  .menu2 {
+    display: flex;
+    flex-direction: column;
+    margin-right: 6rem;
+    
+    @media (min-width: 768px) {
+      
+      flex-direction: row;
+      li {
+        width: 150px;
+        margin-top: 40px;
+        &:first-child {
+          margin-top: 40px;
+        }
+        padding: 0 5px;
+      }
+    }
+  }
+  .backgroundNavbar {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    transform: translate(-120%, 0);
   }
 }
