--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,10 @@ li {
       padding-left: 70px;
       padding-right: 70px;
       text-align: justify;
+      @media screen and (max-width:768px) {
+    
+      padding-right: 40px;
+      }
   }
   h1{
       padding-top: 60px;
@@ -50,4 +54,17 @@ li {
       background-color: #EFE9E1;
       margin-top: -68px;
       z-index: 0;
-  } }
+  } 
+  @media screen and (max-width:768px) {
+    width: 100%;
+    border-radius: 0;
+    margin-top: 0;
+    padding-left: 0;
+    h1 {
+      font-size: 24px;
+    }
+    p {
+      font-size: 18px;
+    }
+  }
+}
