--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -35,6 +35,7 @@ button{
     z-index: 90;
     position: relative;
     margin-top: 87px;
+    padding-bottom: 30px;
     .gridVerMas{
         display: grid;
         height: auto;
@@ -65,9 +66,12 @@ button{
     }
     .grid3{
         grid-template-columns: 1fr;
+        grid-template-rows: 300px;
+        overflow-y: hidden;
         img{
             width: 20%;
             margin-left: 18%;
+            margin-top: -5%;
         }
     }
     .grid4{
