--- a/src/index.scss
+++ b/src/index.scss
@@ -42,6 +42,7 @@ li {
   @media screen and (max-width:768px) {
     width: 100%;
     border-radius: none;
+    margin-bottom: 0;
     }
   h1, h2, p {
       padding: 10px 70px;
@@ -57,14 +58,16 @@ li {
   h1{
       padding-top: 60px;
       padding-bottom: 30px;
-      z-index: 5;
+      z-index: 1;
+      position: relative;
   }
   .subrayado{
       width: 230px;
       height: 18px;
       background-color: #EFE9E1;
-      margin-top: -68px;
+      margin-top: -45px;
       z-index: 0;
+      position: absolute;
   } 
   @media screen and (max-width:768px) {
     width: 100%;
