--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -42,12 +42,40 @@ button{
     position: relative;
     margin-top: 87px;
     padding-bottom: 30px;
+    @media screen and (max-width:768px) {
+        margin-top: 0;
+    }
     .gridVerMas{
         display: grid;
         height: auto;
     }
+    @media screen and (max-width:768px) {    
+        .grid2, .grid3, .grid4, .grid5, .grid6 {    
+            grid-template-columns: 1fr !important;
+            img{
+                width: 90% !important;
+                margin: 0 auto !important;
+                margin-bottom: 10px !important;
+            }
+        }
+        .grid3{
+            grid-template-rows: 450px !important;
+            img{
+                margin-top: -27% !important;
+            }
+        }
+    }
     .grid1{
         grid-template-columns: 1fr 1fr 1fr;
+        @media screen and (max-width:768px) {
+            padding-top: 87px;
+            grid-template-columns: 1fr;
+            img{
+                width: 90% !important;
+                margin: 0 auto !important;
+                margin-bottom: 10px !important;
+            }
+        }
         img{
             width: 65%;
         }
