arreglo en carrusel

--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -33,6 +33,7 @@ button{
     font-size: 24px;
     cursor: pointer;
     font-family: Lato-Light;
+    z-index: 999;
 }
 .verMas{
     width: 100%;
