texto sobre fotos

--- a/src/Pages/Principal/Principal.scss
+++ b/src/Pages/Principal/Principal.scss
@@ -83,7 +83,7 @@
             animation-duration: 25s;
             animation-name: imagen3;
             animation-iteration-count: infinite;
-            animation-timing-function: linear;npm
+            animation-timing-function: linear;
         }
         @keyframes imagen1 {
             0% {
