--- a/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
+++ b/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
@@ -9,14 +9,17 @@
     margin-top: 30px;
     margin-left: 50px;
     display: flex;
+
     tbody {
         width: 88%;
     }
+
     td p {
-        padding-left:0px;
+        padding-left: 0px;
     }
+
     @media screen and (max-width:768px) {
-        margin-left:0;
+        margin-left: 0;
     }
 }
 
@@ -24,20 +27,20 @@
 .trabajamosPresentacion {
     width: 100%;
 
-    h2 {
+    .presentacionParrafo {
         font-size: 22px;
-        font-weight: 100;
-        padding-bottom: 15px;
     }
 }
 
 .containerPresentacion {
     padding-left: 70px;
-    @media screen and (max-width:768px){
-        padding-left: 10px;
+
+    @media screen and (max-width:768px) {
+        padding-left: 0px;
     }
 }
 
 td p {
-    padding-left:0px;
+    padding-left: 0px;
 }
+
