--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,10 +1,10 @@
+@import "../../index.scss";
+
 .navContainer {
   width: 100%;
   height: 100vh;
   display: block;
   position: fixed;
-  top: 20px;
-  left: 20px;
   z-index: 999;
   user-select: none;
   // background-color: rgba($color: #000000, $alpha: 0.3);
@@ -17,7 +17,7 @@
     left: -5px;
     cursor: pointer;
     opacity: 0;
-    z-index: 2;
+    z-index: 200;
 
     // &:checked~ul {
     //   transform: none;
@@ -63,7 +63,7 @@
   }
 
   .menu {
-    width: 50%;
+    width: 60%;
     position: absolute;
     height: 100vh;
     background: #ffffff;
@@ -146,6 +146,10 @@
     }
     .first {
       width: 200px;
+      padding-top: 50px;
+    }
+    .indexButton {
+      font-size: 20px;
     }
   }
   .menu2 {
@@ -179,9 +183,14 @@
     }
   }
   .menuhamburguer {
-    background-color: #ffffff;
+    position: absolute;
+    background-color: $pink1;
     width: 50px;
     height: 40px;
     margin: 15px;
+    z-index: 100;
+    @media screen and (min-width:768px) {
+      display: none;
+    }
   }
 }
