--- a/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
+++ b/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
@@ -1,6 +1,6 @@
 .icon {
     color: #D27F67;
-    font-size: 25px;
+    font-size: 30px;
     width: 80px;
 
 }
@@ -16,10 +16,14 @@
 
     td p {
         padding-left: 0px;
+        text-align: left;
     }
 
     @media screen and (max-width:768px) {
         margin-left: 0;
+        tbody {
+            width: 100%;
+        }
     }
 }
 
@@ -29,14 +33,6 @@
 
     .presentacionParrafo {
         font-size: 22px;
-    }
-}
-
-.containerPresentacion {
-    padding-left: 70px;
-
-    @media screen and (max-width:768px) {
-        padding-left: 0px;
     }
 }
 
