--- a/src/index.scss
+++ b/src/index.scss
@@ -49,7 +49,7 @@ li {
     }
   h1, h2, p {
       padding: 10px 70px;
-      text-align: justify;
+      text-align: left;
       @media screen and (max-width:768px) {
     
       padding-right: 40px;
