--- a/src/Pages/Sobremi/Sobremi.scss
+++ b/src/Pages/Sobremi/Sobremi.scss
@@ -1,19 +1,50 @@
 .section1 {
     display: flex;
     flex-direction: column;
-    margin: 20px 30px 20px 0;
     @media screen and (min-width:768px) {
         flex-direction: row;
+        margin: 20px 20px 20px 0;
+    }
+    img {
+        border-radius: 20px;
+        width: 250px;
+       
+    }
+    .section1Image {
+        display: flex; 
+        justify-content:center;
+        margin: 20px 0;
+         @media screen and (min-width:768px) {
+            margin: 20px 20px 20px 0;
+        }
     }
 }
 .section2 {
-    display: flex;
+    display: grid;
     flex-direction: column;
-    margin: 20px 30px 20px 0;
+    margin: 20px 20px 20px 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    grid-template-areas: "texto texto texto texto" 
+                        "imagen imagen imagen imagen";
     @media screen and (min-width:768px) {
 
-        flex-direction: row;
+        grid-template-areas: "imagen texto texto texto";
     
     }
     
+}
+
+.section2Text {
+    grid-area: texto;
+}
+
+.section2Image {
+    grid-area: imagen;
+    display: flex; 
+    justify-content:center;
+     margin: 20px 0;
+    img {
+        width: 200px;
+    }
 }
