--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,208 +1,268 @@
-@import "../../index.scss";
-
-.navContainer {
-  width: 100%;
-  height: 100vh;
-  display: block;
-  position: fixed;
-  z-index:15 ;
-  user-select: none;
-  // background-color: rgba($color: #000000, $alpha: 0.3);
-  input {
-    display: block;
-    width: 30%;
-    height: 62px;
+.containerBtn{
+    height: 88px;
+    display: flex;
     position: absolute;
-    top: 16px;
-    left: -5px;
+    justify-items: center;
+    margin-left: 15px;
+    display: none;
+    z-index: 1999;
+    @media (max-width: 768px) {
+        display: flex;
+    }
+    .icono{
+      font-size: 40px;
+      width: 40px
+    }
+}
+a {
+    color: black;
+    text-decoration: none;
+    padding: 10px 0;
+    font-size: 18px;
+    width: 100%;
     cursor: pointer;
-    opacity: 0;
-    z-index: 200;
+  
+    &:hover {
+      color: rgb(116, 115, 115);
+    }
+  
+    &:focus {
+      color: grey;
+      color: rgb(110, 110, 110);
+    }
+  
+    &:focus {
+      color: rgb(150, 150, 150);
+    }
+}
+.item{
+    font-size: 24px;
+    font-weight: bold;
+    &:focus {
+      color: #000;
+    }
+    &:focus {
+      color: #000;
+    }
+}
+.transparencia{
+  @media (max-width: 768px){
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.2;
+    z-index:999;
+    top: 0;
+  }
+  
+}
+
+
+// @import "../../index.scss";
+
+// .navContainer {
+//   width: 100%;
+//   height: 100vh;
+//   display: block;
+//   position: fixed;
+//   z-index:15 ;
+//   user-select: none;
+//   input {
+//     display: block;
+//     width: 30%;
+//     height: 62px;
+//     position: absolute;
+//     top: 16px;
+//     left: -5px;
+//     cursor: pointer;
+//     opacity: 0;
+//     z-index: 200;
 
     // &:checked~ul {
     //   transform: none;
     //   transition: 1s ease-out;
     // }
-    &:checked~section {
-      transform: none;
-      transition: 1s ease-out;
-    }
+    // &:checked~section {
+    //   transform: none;
+    //   transition: 1s ease-out;
+    // }
     
 
-    @media (min-width: 768px) {
-      display: none;
-    }
-  }
-  .borderMenu {
-    background-color: $pink1;
-    z-index: 400;
-    position: absolute;
-    width: 35px;
-    height: 500px;
-    left: 0;
-    top: 0;
-  }
-  span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    position: relative;
-    left: 8px;
-    top: 10px;
-    background: #000000;
-    border-radius: 3px;
+    // @media (min-width: 768px) {
+    //   display: none;
+    // }
+  // }
+  // .borderMenu {
+  //   background-color: $pink1;
+  //   z-index: 400;
+  //   position: absolute;
+  //   width: 35px;
+  //   height: 500px;
+  //   left: 0;
+  //   top: 0;
+  // }
+  // span {
+  //   display: block;
+  //   width: 33px;
+  //   height: 4px;
+  //   margin-bottom: 5px;
+  //   position: relative;
+  //   left: 8px;
+  //   top: 10px;
+  //   background: #000000;
+  //   border-radius: 3px;
 
-    z-index: 1;
+  //   z-index: 1;
 
-    transform-origin: 4px 0px;
+  //   transform-origin: 4px 0px;
 
-    &:first-child {
-      transform-origin: 0% 100%;
-    }
+  //   &:first-child {
+  //     transform-origin: 0% 100%;
+  //   }
 
-    &:nth-last-child(2) {
-      transform-origin: 0% 100%;
-    }
+  //   &:nth-last-child(2) {
+  //     transform-origin: 0% 100%;
+  //   }
 
-    @media (min-width: 768px) {
-      display: none;
-    }
-  }
+  //   @media (min-width: 768px) {
+  //     display: none;
+  //   }
+  // }
 
-  .menu {
-    width: 60%;
-    position: absolute;
-    height: 100vh;
-    background: #ffffff;
-    list-style-type: none;
+  // .menu {
+  //   width: 60%;
+  //   position: absolute;
+  //   height: 100vh;
+  //   background: #ffffff;
+  //   list-style-type: none;
     // transform: translate(-100%, 0);
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    color: #232323;
-    transition: color 0.3s ease;
-    z-index: 100;
+//     display: flex;
+//     flex-direction: column;
+//     text-decoration: none;
+//     color: #232323;
+//     transition: color 0.3s ease;
+//     z-index: 100;
 
-    li {
-      margin-top: 15px;
-      margin-right: 5px;
-      margin-left: 20px;
-      width: 100%;
-      z-index: 600;
-      &:hover {
-        color: black;
-      }
+//     li {
+//       margin-top: 15px;
+//       margin-right: 5px;
+//       margin-left: 20px;
+//       width: 100%;
+//       z-index: 600;
+//       &:hover {
+//         color: black;
+//       }
 
-      &:first-child {
-        margin-top: 30px;
-      }
+//       &:first-child {
+//         margin-top: 30px;
+//       }
 
-      @media (min-width: 768px) {
-        padding: 0;
-        margin: 15px 12px;
-        z-index: 100;
-      }
-    }
+//       @media (min-width: 768px) {
+//         padding: 0;
+//         margin: 15px 12px;
+//         z-index: 100;
+//       }
+//     }
 
-    a {
-      color: black;
-      text-decoration: none;
-      padding: 10px 0;
-      font-size: 18px;
-      width: 100%;
+//     a {
+//       color: black;
+//       text-decoration: none;
+//       padding: 10px 0;
+//       font-size: 18px;
+//       width: 100%;
 
-      &:hover {
-        color: rgb(116, 115, 115);
-      }
+//       &:hover {
+//         color: rgb(116, 115, 115);
+//       }
 
-      &:focus {
-        color: grey;
-        color: rgb(110, 110, 110);
-      }
+//       &:focus {
+//         color: grey;
+//         color: rgb(110, 110, 110);
+//       }
 
-      &:focus {
-        color: rgb(150, 150, 150);
-      }
+//       &:focus {
+//         color: rgb(150, 150, 150);
+//       }
 
-      h3 {
-        margin-bottom: 0;
-      }
+//       h3 {
+//         margin-bottom: 0;
+//       }
 
-      p {
-        font-size: 15px;
-        margin-top: 0;
-      }
-    }
+//       p {
+//         font-size: 15px;
+//         margin-top: 0;
+//       }
+//     }
 
-    @media (min-width: 768px) {
-      margin: 0;
-      top: 0;
-      flex-direction: row;
-      width: 100vw;
-      transform: none;
-      justify-content: end;
-      height: 15vh;
-      position: fixed;
-      left: 0;
+//     @media (min-width: 768px) {
+//       margin: 0;
+//       top: 0;
+//       flex-direction: row;
+//       width: 100vw;
+//       transform: none;
+//       justify-content: end;
+//       height: 15vh;
+//       position: fixed;
+//       left: 0;
 
-      .first {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        margin-left: 100px;
-        margin-bottom: 30px;
-        align-self: center;
-      }
-    }
-    .first {
-      width: 200px;
-      padding-top: 50px;
-    }
-    .indexButton {
-      font-size: 20px;
-    }
-  }
-  .menu2 {
-    display: flex;
-    flex-direction: column;
-    margin-right: 6rem;
+//       .first {
+//         position: absolute;
+//         bottom: 0;
+//         left: 0;
+//         margin-left: 100px;
+//         margin-bottom: 30px;
+//         align-self: center;
+//       }
+//     }
+//     .first {
+//       width: 200px;
+//       padding-top: 50px;
+//     }
+//     .indexButton {
+//       font-size: 20px;
+//     }
+//   }
+//   .menu2 {
+//     display: flex;
+//     flex-direction: column;
+//     margin-right: 6rem;
     
-    @media (min-width: 768px) {
+//     @media (min-width: 768px) {
       
-      flex-direction: row;
-      li {
-        width: 150px;
-        margin-top: 40px;
-        &:first-child {
-          margin-top: 40px;
-        }
-        padding: 0 5px;
-      }
-    }
-  }
-  .backgroundNavbar {
-    @media screen and (max-width:768px) {
-       width: 100vw;
-       height: 100vh;
-      background-color: rgba($color: #000000, $alpha: 0.3);
-      transform: translate(-120%, 0);
-      position: absolute;
-      z-index: 1;
-      top: 0;
+//       flex-direction: row;
+//       li {
+//         width: 150px;
+//         margin-top: 40px;
+//         &:first-child {
+//           margin-top: 40px;
+//         }
+//         padding: 0 5px;
+//       }
+//     }
+//   }
+//   .backgroundNavbar {
+//     @media screen and (max-width:768px) {
+//        width: 100vw;
+//        height: 100vh;
+//       background-color: rgba($color: #000000, $alpha: 0.3);
+//       transform: translate(-120%, 0);
+//       position: absolute;
+//       z-index: 1;
+//       top: 0;
       
-    }
-  }
-  .menuhamburguer {
-    position: absolute;
-    background-color: $pink1;
-    width: 50px;
-    height: 40px;
-    margin: 15px;
-    margin-left: 12px;
-    z-index: 100;
-    @media screen and (min-width:768px) {
-      display: none;
-    }
-  }
-}
+//     }
+//   }
+//   .menuhamburguer {
+//     position: absolute;
+//     background-color: $pink1;
+//     width: 50px;
+//     height: 40px;
+//     margin: 15px;
+//     margin-left: 12px;
+//     z-index: 100;
+//     @media screen and (min-width:768px) {
+//       display: none;
+//     }
+//   }
+// }
