--- a/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
+++ b/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
@@ -32,10 +32,13 @@
     width: 100%;
 
     .presentacionParrafo {
-        font-size: 22px;
+        font-size: 18px;
     }
 }
-
+.trabajamosSubtitulo {
+    font-size: 22px;
+    font-weight: lighter;
+}
 td p {
     padding-left: 0px;
 }
