--- a/src/index.scss
+++ b/src/index.scss
@@ -51,8 +51,8 @@ li {
       padding: 10px 70px;
       text-align: left;
       @media screen and (max-width:768px) {
-    
-      padding-right: 40px;
+        padding-left: 40px;
+        padding-right: 40px;
       }
   }
   p{
