--- a/src/index.scss
+++ b/src/index.scss
@@ -57,12 +57,16 @@ li {
   }
   p{
     font-family: Lato-Light;
+    font-size: 18px;
   }
   h1{
+      font-family: Lato;
+      font-size: 24px;
       padding-top: 60px;
       padding-bottom: 30px;
       z-index: 1;
       position: relative;
+      font-weight: lighter;
   }
   .subrayado{
       width: 230px;
