--- a/src/Pages/Contacto/Contacto.scss
+++ b/src/Pages/Contacto/Contacto.scss
@@ -7,13 +7,13 @@
         margin-top: 40px;
         background-color: #FFCBBA;
         @media screen and (max-width:768px) {
-            margin-top: 140px !important;
-            img{
-                width: 60%;
-            }
+            margin-top: 120px !important;
         }
         img{
             width: 35%;
+            @media screen and (max-width:768px){
+                width: 70%;
+            }
         }
     }
     .derechos{
