--- a/src/Pages/Sobremi/Sobremi.scss
+++ b/src/Pages/Sobremi/Sobremi.scss
@@ -14,6 +14,7 @@
         display: flex; 
         justify-content:center;
         margin: 20px;
+        padding-right: 30px;
          @media screen and (min-width:768px) {
             margin: 20px 20px 20px 0;
         }
