--- a/src/Pages/Sobremi/Sobremi.scss
+++ b/src/Pages/Sobremi/Sobremi.scss
@@ -1,22 +1,33 @@
 .section1 {
     display: flex;
     flex-direction: column;
-    @media screen and (min-width:768px) {
+    margin-top: 30px;
+    @media screen and (min-width:868px) {
         flex-direction: row;
         margin: 0px 20px 0px 0;
     }
     img {
         border-radius: 20px;
-        width: 250px;
+        width: 100%;
        
     }
+    
+.parrafoContainer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
     .section1Image {
         display: flex; 
         justify-content:center;
+        height: 100%;
         margin: 20px;
-        padding-right: 30px;
-         @media screen and (min-width:768px) {
+        padding-right: 0px;
+         @media screen and (min-width:868px) {
             margin: 20px 20px 20px 0;
+            padding-right: 30px;
+            width: 50%;
         }
     }
 }
@@ -27,7 +38,7 @@
     grid-template-rows: auto;
     grid-template-areas: "texto texto" 
                         "imagen imagen";
-    @media screen and (min-width:768px) {
+    @media screen and (min-width:868px) {
 
         grid-template-areas: "imagen texto";
     
@@ -41,16 +52,14 @@
 }
 
 .section2Image {
+
+    height: 100%;
     grid-area: imagen;
     display: flex; 
-    justify-content:end;
+    overflow: hidden;
+    margin: 0 auto;
+    justify-content:center;
     img {
         width: 260px;
     }
-}
-
-.parrafoContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
 }
