--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -122,25 +122,18 @@
             margin: 0 auto;
         }
     }
-    .grid3{
-        grid-template-columns: 1fr;
-        grid-template-rows: 300px;
-        overflow-y: hidden;
-        img{
-            width: 20%;
-            margin-left: 18%;
-            margin-top: -5%;
-        }
-    }
     .grid4{
         grid-template-columns: 1fr 1fr;
         img{
             width: 40%;
         }
+        .jarron{
+            display: flex;
+            justify-self: center;
+        }
         .anillo{
             display: flex;
             justify-self: right;
-            margin-top: -18%;
         }
     }
     .grid5{
