--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,11 +1,28 @@
-.footerContainer {
-    position: absolute;
-
 .footer {
-    background-color: white;
-    position: fixed;
-    bottom: 0px;
-    width: 100vw;  
-    padding: 30px;
-}
+    position: relative;
+    background-color: #FCFBFA;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-top: 50px;
+    padding-top: 10px;
+    border-radius: 0px 0px 15px 15px;
+    height: 65px !important;
+    padding-bottom: 5px;
+    p{
+        font-size: 14px;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        padding-left: 15px !important;
+        background: transparent;
+
+    }
+    a {
+        font-size: 14px;
+    }
+    @media screen and (max-width:768px) {
+        margin-top: 0;
+        border-radius: none !important;
+    }
 }
