--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -24,6 +24,7 @@
     @media screen and (max-width:768px) {
         margin-top: 0;
         border-radius: none !important;
+        height: 75px !important;
     }
     .links span {
         cursor: pointer;
