--- a/src/Pages/Contacto/Contacto.scss
+++ b/src/Pages/Contacto/Contacto.scss
@@ -44,19 +44,20 @@
             display: flex;
             flex-direction: column;
             width: 33%;
+            @media screen and (max-width:768px) {
+                padding: 5px 0;
+                flex-direction: row;
+                width: 100%;
+            }
             svg, p {
                 align-self: center;
-                padding: 0;
-                @media screen and (max-width:768px) {
-                    align-self: initial;
-                }
+                padding: 0;           
             }
             p {
                 padding-top: 10px;
                 @media screen and (max-width:768px) {
-                    padding-left: 29px;
-                    padding-bottom: 10px;
-                    width: 100vw;
+                    padding-top: 0;
+                    
                 }
             }
         }
