--- a/src/Pages/Sobremi/Sobremi.scss
+++ b/src/Pages/Sobremi/Sobremi.scss
@@ -17,6 +17,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    .presentacionParrafo {
+        padding: 10px 20px 10px 70px;
+        @media screen and (max-width:868px) {
+            padding: 10px 20px
+        }
+    }
 }
     .section1Image {
         display: flex; 
@@ -25,7 +31,7 @@
         margin: 20px;
         padding-right: 0px;
          @media screen and (min-width:868px) {
-            margin: 20px 20px 20px 0;
+            margin: 20px 20px 0 0;
             padding-right: 30px;
             width: 50%;
         }
@@ -53,13 +59,13 @@
 
 .section2Image {
 
-    height: 100%;
     grid-area: imagen;
     display: flex; 
     overflow: hidden;
     margin: 0 auto;
     justify-content:center;
     img {
-        width: 260px;
+        margin-left: 50px;
+        width: 250px;
     }
 }
