--- a/src/Pages/Contacto/Contacto.scss
+++ b/src/Pages/Contacto/Contacto.scss
@@ -1,6 +1,8 @@
 .contacto {
     padding-bottom: 0 !important;
-
+    .parrafoContainer{
+        margin-top: 30px;
+    }
     .imgContainer {
         width: 100%;
         display: flex;
