--- a/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
+++ b/src/Pages/ComoTrabajamos/ComoTrabajamos.scss
@@ -31,15 +31,20 @@
 
     .presentacionParrafo {
         font-size: 18px;
+       
     }
 }
 .trabajamosSubtitulo {
     margin-top: 30px;
-    font-size: 18px;
+    font-size: 22px;
     font-weight:100;
+    @media screen and (max-width:768px) {
+        font-size: 18px;
+        }
 }
 td p {
     padding-left: 0px;
+    font-size: 16px;
 }
 
 }
