--- a/src/Pages/Fotos360/Fotos360.scss
+++ b/src/Pages/Fotos360/Fotos360.scss
@@ -28,6 +28,7 @@
     display: flex;
     justify-content: center;
     margin-top: 30px;
+    margin-bottom: 20px;
     button{
         background-color: transparent;
         padding: 10px 30px;
@@ -54,13 +55,14 @@
     background-color: #fff;
     z-index: 90;
     position: relative;
-    margin-top: 87px;
+    margin-top: 87px ;
+    
     padding-bottom: 30px;
     p{
         display: none;
     }
     @media screen and (max-width:768px) {
-        margin-top: -40px;
+        margin-top: 0px;
         p{
             display: flex;
             padding-left: 30px;
