--- a/src/Pages/Contacto/Contacto.scss
+++ b/src/Pages/Contacto/Contacto.scss
@@ -23,8 +23,11 @@
             }
         }
     }
-    .instagram{
+    .redes{
         cursor: pointer;
+        &:hover {
+            color: #D27F67;
+        }
     }
   
 
